classDiagram
    class Appcodes {
      STRING appcode
      STRING custodian
      STRING L3
      STRING L4
      STRING L5
    }

    class ProjectCodes {
      STRING project_code
      STRING appcode
      STRING domain
    }

    class Projects {
      STRING project_name
      STRING project_code
      STRING description
      STRING project_id
      STRING landing_zone_id
      STRING service_tier
      STRING solution_id
    }

    class Migrations {
      STRING migration_id
      TIMESTAMP applied_at
    }

    class ProjectCodeControl {
      INT64 next_available_code
    }

    class AllProjectCodes {
      STRING project_code
      BOOLEAN in_use
    }

    Appcodes "1" -- "0..*" ProjectCodes : has
    ProjectCodes "1" -- "0..*" Projects : has
    ProjectCodes "1" -- "0..*" AllProjectCodes : has